# ComputerVisionProject2022

./: .gitignore  CMakeLists.txt  README.md
docs/: .~lock.Report.odt#  Report.odt
headers/: handLocalization.hpp  handSegmentation.hpp
src/: handLocalization.cpp  handSegmentation.cpp  main.cpp  yolov5_hand_localization.ipynb  yolov5_hand_localization.v2.ipynb
src/yolov5/: .gitignore
src/yolov5/runs/train/yolo_hand_localization/: events.out.tfevents.1657559044.6518631a5d8d.683.0
support/: README.md
support/GraphSegmTuning/: CMakeLists.txt
support/GraphSegmTuning/headers/: tunableGraphSegm.hpp
support/GraphSegmTuning/src/: main.cpp  tunableGraphSegm.cpp
support/TRAINING_NOTEBOOKS/: yolov5_hand_localization.v2.ipynb  yolov5_hand_localization.v2_with_output.ipynb
support/annotation_conversion_scripts/: hand_bbox_from_mat.py
support/bilateralTuning/: CMakeLists.txt
support/bilateralTuning/headers/: tunableBilateral.hpp
support/bilateralTuning/src/: main.cpp  tunableBilateral.cpp
support/displayOxfordValidationTarget/: .gitignore  README.md  showTargetResultsOnValidationData.ipynb
support/showProjectSegmentation/: CMakeLists.txt
support/showProjectSegmentation/headers/: segmentProjectDatasetTrueRegions.hpp
support/showProjectSegmentation/src/: main.cpp  segmentProjectDatasetTrueRegions.cpp
yolov5/runs/train/yolo_hand_localization/: opt.yaml  results.csv
